k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: monolito
  name: monolito
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: monolito
