k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monoingress
spec:
  rules:
    - http:
        paths:
        - path: /monolito
          pathType: Prefix
          backend:
            service:
              name: monolito
              port:
                number: 80
  tls:
    - secretName: db-secret
